# DLMG-cuDNN

./: CMakeLists.txt  README.md
include/: Activation.h  ConvolutionLayer.h  CudaHelper.h  CudaKernels.h  DLMG.h  FullyConnectedLayer.h  GhostLayer.h  Layer.h  LayerBlock.h  MaxPoolLayer.h  Network.h  SoftmaxLayer.h  dlmg_types.h  gpu_kernel_defines.h  math_utilities.h  mpi_utilities.h  mpi_var.h  precision_types.h  readubyte.h
src/: CMakeLists.txt  main.cu
src/containers/: DLMG.cu
src/kernels/: CudaKernels.cu
src/layers/: ConvolutionLayer.cpp  FullyConnectedLayer.cpp  GhostLayer.cu  Layer.cpp  LayerBlock.cpp  MaxPoolLayer.cpp  SoftmaxLayer.cu
src/network/: Network.cu  NetworkBackward.cu  NetworkForward.cu  NetworkInitialize.cu  NetworkMultigrid.cu  NetworkUtilities.cu
src/tests/: CMakeLists.txt  gradient.cu  gradient.h  main.cu
src/utilities/: mpi_utilities.cpp  readubyte.cpp
